crates/jolt_java_syntax/tests/snapshots/corpus__style__statements__formatter_ignore_adjacent_ranges.snap
---
source: crates/jolt_java_syntax/tests/corpus.rs
expression: snapshot
---
input:
class Example {
void run() {
int before=1;
// @formatter:off
int first=1+2;
// @formatter:on
// @formatter:off
int second=3+4;
// @formatter:on
int after=5;
}

void repeatedOff() {
int before=1;
// @formatter:off
int first=1+2;
// @formatter:off
int second=3+4;
// @formatter:on
int after=5;
}

void sameLineTransition() {
int before=1;
// @formatter:off
int first=1+2;
/* @formatter:on */ /* @formatter:off */
int second=3+4;
// @formatter:on
int after=5;
}

void unmatchedOff() {
int before=1;
// @formatter:off
int stillFormatted=2+3;
}

void unmatchedOn() {
int before=1;
// @formatter:on
int stillFormatted=2+3;
}
}

syntax:
syntax:
CompilationUnit
  CompilationUnitItemList
    ClassDeclaration
      ClassKw "class" @ 0..5 trailing=[Whitespace " "]
      Identifier "Example" @ 6..13 trailing=[Whitespace " "]
      ClassBody
        LBrace "{" @ 14..15
        ClassBodyMemberList
          MethodDeclaration
            VoidType
              VoidKw "void" @ 16..20 leading=[Newline "\n"] trailing=[Whitespace " "]
            Identifier "run" @ 21..24
            LParen "(" @ 24..25
            RParen ")" @ 25..26 trailing=[Whitespace " "]
            Block
              LBrace "{" @ 27..28
              BlockStatementList
                BlockStatement
                  LocalVariableDeclaration
                    ParameterModifierList
                    PrimitiveType
                      AnnotationList
                      IntKw "int" @ 29..32 leading=[Newline "\n"] trailing=[Whitespace " "]
                    VariableDeclaratorList
                      VariableDeclarator
                        Identifier "before" @ 33..39
                        Assign "=" @ 39..40
                        VariableInitializer
                          LiteralExpression
                            IntegerLiteral "1" @ 40..41
                  Semicolon ";" @ 41..42
                BlockStatement
                  LocalVariableDeclaration
                    ParameterModifierList
                    PrimitiveType
                      AnnotationList
                      IntKw "int" @ 61..64 leading=[Newline "\n", LineComment "// @formatter:off", Newline "\n"] trailing=[Whitespace " "]
                    VariableDeclaratorList
                      VariableDeclarator
                        Identifier "first" @ 65..70
                        Assign "=" @ 70..71
                        VariableInitializer
                          BinaryExpression
                            LiteralExpression
                              IntegerLiteral "1" @ 71..72
                            Plus "+" @ 72..73
                            LiteralExpression
                              IntegerLiteral "2" @ 73..74
                  Semicolon ";" @ 74..75
                BlockStatement
                  LocalVariableDeclaration
                    ParameterModifierList
                    PrimitiveType
                      AnnotationList
                      IntKw "int" @ 111..114 leading=[Newline "\n", LineComment "// @formatter:on", Newline "\n", LineComment "// @formatter:off", Newline "\n"] trailing=[Whitespace " "]
                    VariableDeclaratorList
                      VariableDeclarator
                        Identifier "second" @ 115..121
                        Assign "=" @ 121..122
                        VariableInitializer
                          BinaryExpression
                            LiteralExpression
                              IntegerLiteral "3" @ 122..123
                            Plus "+" @ 123..124
                            LiteralExpression
                              IntegerLiteral "4" @ 124..125
                  Semicolon ";" @ 125..126
                BlockStatement
                  LocalVariableDeclaration
                    ParameterModifierList
                    PrimitiveType
                      AnnotationList
                      IntKw "int" @ 144..147 leading=[Newline "\n", LineComment "// @formatter:on", Newline "\n"] trailing=[Whitespace " "]
                    VariableDeclaratorList
                      VariableDeclarator
                        Identifier "after" @ 148..153
                        Assign "=" @ 153..154
                        VariableInitializer
                          LiteralExpression
                            IntegerLiteral "5" @ 154..155
                  Semicolon ";" @ 155..156
              RBrace "}" @ 157..158 leading=[Newline "\n"]
          MethodDeclaration
            VoidType
              VoidKw "void" @ 160..164 leading=[Newline "\n", Newline "\n"] trailing=[Whitespace " "]
            Identifier "repeatedOff" @ 165..176
            LParen "(" @ 176..177
            RParen ")" @ 177..178 trailing=[Whitespace " "]
            Block
              LBrace "{" @ 179..180
              BlockStatementList
                BlockStatement
                  LocalVariableDeclaration
                    ParameterModifierList
                    PrimitiveType
                      AnnotationList
                      IntKw "int" @ 181..184 leading=[Newline "\n"] trailing=[Whitespace " "]
                    VariableDeclaratorList
                      VariableDeclarator
                        Identifier "before" @ 185..191
                        Assign "=" @ 191..192
                        VariableInitializer
                          LiteralExpression
                            IntegerLiteral "1" @ 192..193
                  Semicolon ";" @ 193..194
                BlockStatement
                  LocalVariableDeclaration
                    ParameterModifierList
                    PrimitiveType
                      AnnotationList
                      IntKw "int" @ 213..216 leading=[Newline "\n", LineComment "// @formatter:off", Newline "\n"] trailing=[Whitespace " "]
                    VariableDeclaratorList
                      VariableDeclarator
                        Identifier "first" @ 217..222
                        Assign "=" @ 222..223
                        VariableInitializer
                          BinaryExpression
                            LiteralExpression
                              IntegerLiteral "1" @ 223..224
                            Plus "+" @ 224..225
                            LiteralExpression
                              IntegerLiteral "2" @ 225..226
                  Semicolon ";" @ 226..227
                BlockStatement
                  LocalVariableDeclaration
                    ParameterModifierList
                    PrimitiveType
                      AnnotationList
                      IntKw "int" @ 246..249 leading=[Newline "\n", LineComment "// @formatter:off", Newline "\n"] trailing=[Whitespace " "]
                    VariableDeclaratorList
                      VariableDeclarator
                        Identifier "second" @ 250..256
                        Assign "=" @ 256..257
                        VariableInitializer
                          BinaryExpression
                            LiteralExpression
                              IntegerLiteral "3" @ 257..258
                            Plus "+" @ 258..259
                            LiteralExpression
                              IntegerLiteral "4" @ 259..260
                  Semicolon ";" @ 260..261
                BlockStatement
                  LocalVariableDeclaration
                    ParameterModifierList
                    PrimitiveType
                      AnnotationList
                      IntKw "int" @ 279..282 leading=[Newline "\n", LineComment "// @formatter:on", Newline "\n"] trailing=[Whitespace " "]
                    VariableDeclaratorList
                      VariableDeclarator
                        Identifier "after" @ 283..288
                        Assign "=" @ 288..289
                        VariableInitializer
                          LiteralExpression
                            IntegerLiteral "5" @ 289..290
                  Semicolon ";" @ 290..291
              RBrace "}" @ 292..293 leading=[Newline "\n"]
          MethodDeclaration
            VoidType
              VoidKw "void" @ 295..299 leading=[Newline "\n", Newline "\n"] trailing=[Whitespace " "]
            Identifier "sameLineTransition" @ 300..318
            LParen "(" @ 318..319
            RParen ")" @ 319..320 trailing=[Whitespace " "]
            Block
              LBrace "{" @ 321..322
              BlockStatementList
                BlockStatement
                  LocalVariableDeclaration
                    ParameterModifierList
                    PrimitiveType
                      AnnotationList
                      IntKw "int" @ 323..326 leading=[Newline "\n"] trailing=[Whitespace " "]
                    VariableDeclaratorList
                      VariableDeclarator
                        Identifier "before" @ 327..333
                        Assign "=" @ 333..334
                        VariableInitializer
                          LiteralExpression
                            IntegerLiteral "1" @ 334..335
                  Semicolon ";" @ 335..336
                BlockStatement
                  LocalVariableDeclaration
                    ParameterModifierList
                    PrimitiveType
                      AnnotationList
                      IntKw "int" @ 355..358 leading=[Newline "\n", LineComment "// @formatter:off", Newline "\n"] trailing=[Whitespace " "]
                    VariableDeclaratorList
                      VariableDeclarator
                        Identifier "first" @ 359..364
                        Assign "=" @ 364..365
                        VariableInitializer
                          BinaryExpression
                            LiteralExpression
                              IntegerLiteral "1" @ 365..366
                            Plus "+" @ 366..367
                            LiteralExpression
                              IntegerLiteral "2" @ 367..368
                  Semicolon ";" @ 368..369
                BlockStatement
                  LocalVariableDeclaration
                    ParameterModifierList
                    PrimitiveType
                      AnnotationList
                      IntKw "int" @ 411..414 leading=[Newline "\n", BlockComment "/* @formatter:on */", Whitespace " ", BlockComment "/* @formatter:off */", Newline "\n"] trailing=[Whitespace " "]
                    VariableDeclaratorList
                      VariableDeclarator
                        Identifier "second" @ 415..421
                        Assign "=" @ 421..422
                        VariableInitializer
                          BinaryExpression
                            LiteralExpression
                              IntegerLiteral "3" @ 422..423
                            Plus "+" @ 423..424
                            LiteralExpression
                              IntegerLiteral "4" @ 424..425
                  Semicolon ";" @ 425..426
                BlockStatement
                  LocalVariableDeclaration
                    ParameterModifierList
                    PrimitiveType
                      AnnotationList
                      IntKw "int" @ 444..447 leading=[Newline "\n", LineComment "// @formatter:on", Newline "\n"] trailing=[Whitespace " "]
                    VariableDeclaratorList
                      VariableDeclarator
                        Identifier "after" @ 448..453
                        Assign "=" @ 453..454
                        VariableInitializer
                          LiteralExpression
                            IntegerLiteral "5" @ 454..455
                  Semicolon ";" @ 455..456
              RBrace "}" @ 457..458 leading=[Newline "\n"]
          MethodDeclaration
            VoidType
              VoidKw "void" @ 460..464 leading=[Newline "\n", Newline "\n"] trailing=[Whitespace " "]
            Identifier "unmatchedOff" @ 465..477
            LParen "(" @ 477..478
            RParen ")" @ 478..479 trailing=[Whitespace " "]
            Block
              LBrace "{" @ 480..481
              BlockStatementList
                BlockStatement
                  LocalVariableDeclaration
                    ParameterModifierList
                    PrimitiveType
                      AnnotationList
                      IntKw "int" @ 482..485 leading=[Newline "\n"] trailing=[Whitespace " "]
                    VariableDeclaratorList
                      VariableDeclarator
                        Identifier "before" @ 486..492
                        Assign "=" @ 492..493
                        VariableInitializer
                          LiteralExpression
                            IntegerLiteral "1" @ 493..494
                  Semicolon ";" @ 494..495
                BlockStatement
                  LocalVariableDeclaration
                    ParameterModifierList
                    PrimitiveType
                      AnnotationList
                      IntKw "int" @ 514..517 leading=[Newline "\n", LineComment "// @formatter:off", Newline "\n"] trailing=[Whitespace " "]
                    VariableDeclaratorList
                      VariableDeclarator
                        Identifier "stillFormatted" @ 518..532
                        Assign "=" @ 532..533
                        VariableInitializer
                          BinaryExpression
                            LiteralExpression
                              IntegerLiteral "2" @ 533..534
                            Plus "+" @ 534..535
                            LiteralExpression
                              IntegerLiteral "3" @ 535..536
                  Semicolon ";" @ 536..537
              RBrace "}" @ 538..539 leading=[Newline "\n"]
          MethodDeclaration
            VoidType
              VoidKw "void" @ 541..545 leading=[Newline "\n", Newline "\n"] trailing=[Whitespace " "]
            Identifier "unmatchedOn" @ 546..557
            LParen "(" @ 557..558
            RParen ")" @ 558..559 trailing=[Whitespace " "]
            Block
              LBrace "{" @ 560..561
              BlockStatementList
                BlockStatement
                  LocalVariableDeclaration
                    ParameterModifierList
                    PrimitiveType
                      AnnotationList
                      IntKw "int" @ 562..565 leading=[Newline "\n"] trailing=[Whitespace " "]
                    VariableDeclaratorList
                      VariableDeclarator
                        Identifier "before" @ 566..572
                        Assign "=" @ 572..573
                        VariableInitializer
                          LiteralExpression
                            IntegerLiteral "1" @ 573..574
                  Semicolon ";" @ 574..575
                BlockStatement
                  LocalVariableDeclaration
                    ParameterModifierList
                    PrimitiveType
                      AnnotationList
                      IntKw "int" @ 593..596 leading=[Newline "\n", LineComment "// @formatter:on", Newline "\n"] trailing=[Whitespace " "]
                    VariableDeclaratorList
                      VariableDeclarator
                        Identifier "stillFormatted" @ 597..611
                        Assign "=" @ 611..612
                        VariableInitializer
                          BinaryExpression
                            LiteralExpression
                              IntegerLiteral "2" @ 612..613
                            Plus "+" @ 613..614
                            LiteralExpression
                              IntegerLiteral "3" @ 614..615
                  Semicolon ";" @ 615..616
              RBrace "}" @ 617..618 leading=[Newline "\n"]
        RBrace "}" @ 619..620 leading=[Newline "\n"]
  Eof "" @ 621..621 leading=[Newline "\n"]

diagnostics:
  (none)

diagnostics:
(none)
